# coursework

./: .env  .gitignore  README.md  pyproject.toml
data/: operations.xls
src/: decorators.py  logger.py  main.py  report.csv  reports.py  services.py  utils.py  views.py
tests/: test_decorators.py  test_utils.py  test_views.py
